<resources>
    <string name="app_name">WeatherApp</string>
    <string name="debug">Debug</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search Button</string>
    <string name="hint_location"><i>City Name</i></string>
    <string name="hint_airport_code"><i>Airport ICAO Code</i></string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_forecast">ForecastActivity</string>
    <string name="card_title">Hello World</string>
    <string name="card_content">Hello Android</string>
    <string name="city_name">City Name</string>
    <string name="sky_condition">Sky Condition</string>
    <string name="wind">Wind: </string>
    <string name="humidity">Humidity: </string>
    <string name="img_condition">Weather Condition Image</string>
    <string name="temp">85  C</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="description_mini_icon">Mini Icon</string>
    <string name="temp_min">60F</string>
    <string name="temp_max">100F</string>
    <string name="sunrise">Sunrise Image</string>
    <string name="units">Units</string>
    <string name="forecast_title">Weather Forecast</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="is_pilot">I\'m a pilot!</string>
    <string name="addButton">Add new page</string>
    <string name="backButton">Back to search view</string>
    <string name="add_new_city">Add New City</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="removeButton">Remove a page</string>
    <string name="metar_title">METAR</string>
    <string name="taf_title">TAF</string>
    <string name="metar_text">KBGM 251553Z 25009KT 220V300 10SM SCT039 21/12 A2993 RMK AO2 SLP126 T02110117</string>
    <string name="area_forecast_text">000\n
FAUS43 KKCI 261845\n
FA3W\n
CHIC FA 261845\n
SYNOPSIS AND VFR CLDS/WX\n
SYNOPSIS VALID UNTIL 271300\n
CLDS/WX VALID UNTIL 270700…OTLK VALID 270700-271300\n
ND SD NE KS MN IA MO WI LM LS MI LH IL IN KY\n
\n
SEE AIRMET SIERRA FOR IFR CONDS AND MTN OBSCN.\n
TS IMPLY SEV OR GTR TURB SEV ICE LLWS AND IFR CONDS.\n
NON MSL HGTS DENOTED BY AGL OR CIG.\n
\n
SYNOPSIS…HIGH PRES NRN MN-SRN MO. TROF OF LOW PRES XTRM WRN\n
DAKOTAS-NEB PNHDL. 13Z LOW PRES WRN NEB. CDFNT NRN ND. QUASI-STNR\n
FNT NWRN SD-WRN NEB.\n
\n
ND\n
W HLF…SCT150 SCT-BKN CI. OTLK…VFR.\n
E HLF…SKC. OCNL SCT150. OTLK…VFR.\n
\n
SD\n
W HLF…SCT150 SCT-BKN CI. 01Z SCT100 BKN150 LYRD FL250. SCT\n
-TSRA. CB TOPS ABV FL450. OTLK…VFR TSRA.\n
E HLF…BKN-SCT120-150 LYRD FL250. OTLK…VFR TSRA.\n
\n
NE\n
W HKC OR SCT CI. 02Z SCT-BKN130 LYRD FL250. WDLY SCT -TSRA.\n
CB TOP FL450. 06Z SCT150. OTLK…VFR.\n
E HLF…SCT120 SCT CI. XTRM NERN PTNS TIL 23Z ISOL -TSRA. CB TOP\n
FL300. OTLK…VFR THRUT.\n
\n
KS\n
W HLF…SKC. OTLK…VFR.\n
E HLF…SCT060-070. 01Z SKC. OTLK…VFR.\n
\n
MN\n
ARROWHEAD…SKC. OTLK…MVFR BR.\n
RMNDR N HLF…SKC OR SCT CI. OTLK…VFR.\n
SW...SCT080-100 SCT-BKN CI. WDLY SCT -SHRA. 07Z SCT060 BKN CI.\n
OTLK...VFR.\n
SE...SKC. OTLK...VFR.\n
\n
IA\n
E HLF...SCT150 BKN CI. 03Z BKN150 LYRD FL250. OTLK...VFR SHRA.\n
W HLF...SCT-BKN150 TOP FL200. OTLK...VFR.\n
\n
MO\n
SKC. TIL 01Z SCT060. OTLK...VFR.\n
\n
WI\n
NW...SKC. TIL 01Z SCT040. OTLK...VFR.\n
NERN...BKN-SCT050 TOP 080. 01Z SKC. OTLK...VFR.\n
SE...BKN-OVC030 TOP 080. BECMG 0102 SKC. OTLK...VFR.\n
\n
LS UPR MI\n
W HLF...SCT050. 01Z SKC. OTLK...VFR.\n
E HLF...BKN-OVC035 TOP 080. BECMG 0304 SKC. AFT 06Z OCNL VIS 3SM\n
BR. OTLK...MVFR BR.\n
\n
LM LWR MI LH\n
W HLF...BKN-OVC040 TOP 100. 23Z BKN050. 03Z SKC. AFT 06Z OCNL VIS\n
3SM BR. OTLK...MVFR BR.\n
E HLF...BKN025 OVC040 TOP 080-100. 02Z SCT045. OTLK...VFR.\n
\n
IL\n
NW...SCT050. 02Z SCT CI. OTLK..VFR.\n
NERN...BKN045 TOP 080. 03Z BKN060. OTLK...VFR.\n
S HLF...SCT-BKN050-060 TOP 080. 01Z SKC. OTLK...VFR.\n
\n
IN\n
NRN 1/3...OVC030-035 TOP 080. 01Z SCT040. AFT 06Z OCNL VIS 3-5SM\n
BR. OTLK...MVFR BR.\n
RMNDR...BKN060-070 TOP 100. 23Z SCT040. 01Z SCT CI. AFT 06Z OCNL\n
VIS 3-5SM BR. OTLK...VFR.\n
\n
KY\n
BKN050-060 TOP 080. 01Z SCT050-060. OTLK...VFR.\n
</string>
</resources>
