<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    card_view:cardBackgroundColor="@color/LightBlue"
    card_view:cardCornerRadius="1dp"
    card_view:cardElevation="15dp"
    card_view:cardUseCompatPadding="true"
    >
    <RelativeLayout
        android:id="@+id/card_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/sky_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="0dp"
            android:layout_below="@+id/city_name"
            android:text="@string/sky_condition"/>
        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:layout_below="@+id/city_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:layout_toEndOf="@+id/sky_condition"
            android:layout_toRightOf="@+id/sky_condition"/>

        <TextView
            android:id="@+id/precip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:layout_below="@+id/city_name"
            android:layout_toEndOf="@+id/wind"
            android:layout_toRightOf="@+id/wind"
            />

        <ImageView
            android:id="@+id/img_condition"
            android:contentDescription="@string/img_condition"
            android:layout_width="96dp"
            android:layout_height="100dp"
            android:layout_below="@+id/sky_condition"/>

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_below="@+id/wind"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/img_condition"
            android:layout_toRightOf="@+id/img_condition"
            android:text="@string/temp"
            android:textSize="76sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="0dp" />
        <LinearLayout
            android:id="@+id/fivedayview"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/img_condition">
            <LinearLayout
                android:id="@+id/dayoneview"
                android:orientation="vertical"
                android:paddingLeft="@dimen/five_day_spacing"
                android:paddingEnd="@dimen/five_day_spacing"
                android:paddingRight="@dimen/five_day_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dayone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon"/>
                <ImageView
                    android:id="@+id/dayoneicon"
                    android:contentDescription="@string/description_mini_icon"
                    android:layout_width="@dimen/five_day_img_dimens"
                    android:layout_height="@dimen/five_day_img_dimens"
                    android:layout_marginTop="@dimen/five_day_spacing"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/dayonetempmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_min"/>
                <TextView
                    android:id="@+id/dayonetempmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_max"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/daytwoview"
                android:orientation="vertical"
                android:paddingLeft="@dimen/five_day_spacing"
                android:paddingEnd="@dimen/five_day_spacing"
                android:paddingRight="@dimen/five_day_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/daytwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon"/>

                <ImageView
                    android:id="@+id/daytwoicon"
                    android:contentDescription="@string/description_mini_icon"
                    android:layout_width="@dimen/five_day_img_dimens"
                    android:layout_height="@dimen/five_day_img_dimens"
                    android:layout_marginTop="@dimen/five_day_spacing"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/daytwotempmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_min"/>
                <TextView
                    android:id="@+id/daytwotempmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_max"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/daythreeview"
                android:orientation="vertical"
                android:paddingLeft="@dimen/five_day_spacing"
                android:paddingEnd="@dimen/five_day_spacing"
                android:paddingRight="@dimen/five_day_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/daythree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon"/>
                <ImageView
                    android:id="@+id/daythreeicon"
                    android:contentDescription="@string/description_mini_icon"
                    android:layout_width="@dimen/five_day_img_dimens"
                    android:layout_height="@dimen/five_day_img_dimens"
                    android:layout_marginTop="@dimen/five_day_spacing"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/daythreetempmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_min"/>
                <TextView
                    android:id="@+id/daythreetempmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_max"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dayfourview"
                android:orientation="vertical"
                android:paddingLeft="@dimen/five_day_spacing"
                android:paddingEnd="@dimen/five_day_spacing"
                android:paddingRight="@dimen/five_day_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dayfour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon"/>
                <ImageView
                    android:id="@+id/dayfouricon"
                    android:contentDescription="@string/description_mini_icon"
                    android:layout_width="@dimen/five_day_img_dimens"
                    android:layout_height="@dimen/five_day_img_dimens"
                    android:layout_marginTop="@dimen/five_day_spacing"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/dayfourtempmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_min"/>
                <TextView
                    android:id="@+id/dayfourtempmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_max"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dayfiveview"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dayfive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/five_day_spacing"
                    android:paddingEnd="@dimen/five_day_spacing"
                    android:paddingRight="@dimen/five_day_spacing"
                    android:text="@string/mon"/>
                <ImageView
                    android:id="@+id/dayfiveicon"
                    android:contentDescription="@string/description_mini_icon"
                    android:layout_width="@dimen/five_day_img_dimens"
                    android:layout_height="@dimen/five_day_img_dimens"
                    android:layout_marginTop="@dimen/five_day_spacing"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/dayfivetempmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_min"/>
                <TextView
                    android:id="@+id/dayfivetempmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/five_day_spacing"
                    android:text="@string/temp_max"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/sunrise"
            android:drawableStart="@drawable/sunrise"
            android:drawableLeft="@drawable/sunrise"
            android:layout_below="@+id/fivedayview"
            android:layout_marginLeft="@dimen/five_day_spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="bottom"
            android:text="  5:40am"/>
        <TextView
            android:id="@+id/sunset"
            android:drawableStart="@drawable/sunset"
            android:drawableLeft="@drawable/sunset"
            android:layout_below="@+id/fivedayview"
            android:layout_toEndOf="@+id/sunrise"
            android:layout_toRightOf="@+id/sunrise"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="bottom"
            android:text="  5:40pm"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>

